<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dip">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_b_label"
        android:gravity="center_horizontal"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_start_a_label"
            android:onClick="startActivityA" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_start_c_label"
            android:onClick="startActivityC"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_finish_b_label"
            android:onClick="finishActivityB" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_start_dialog_label"
            android:onClick="startDialog" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lifecycle_method_list"
        android:textStyle="bold"
        android:textSize="22sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="210dp" >

        <TextView
            android:id="@+id/textViewMethodStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="4dip"
            android:textColor="@color/black"
            android:typeface="monospace" />
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_status"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="4dip"
        android:textColor="@color/black"
        android:typeface="monospace" />
</LinearLayout>

