<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dip" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dip"
        android:text="@string/activity_a"
        android:textStyle="bold"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonStartB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startActivityB"
            android:layout_weight="1"
            android:text="@string/btn_start_b_label" />

        <Button
            android:id="@+id/buttonStartC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startActivityC"
            android:layout_weight="1"
            android:text="@string/btn_start_c_label" />

        <Button
            android:id="@+id/buttonFinishA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="finishActivityA"
            android:layout_weight="1"
            android:text="@string/btn_finish_a_label" />

        <Button
            android:id="@+id/buttonDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDialog"
            android:layout_weight="1"
            android:text="@string/btn_start_dialog_label" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lifecycle_method_list"
        android:textStyle="bold"
        android:textSize="22sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="210dp" >

        <TextView
            android:id="@+id/textViewMethodStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="4dip"
            android:textColor="@color/black"
            android:typeface="monospace" />
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_status"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="4dip"
        android:textColor="@color/black"
        android:typeface="monospace" />

</LinearLayout>